=== 3.0

Breaking changes:

* No longer supports ruby 2.0 and earlier
* Net::HTTP::Persistent::new now uses keyword arguments for +name+ and
  +proxy+.
* Removed #max_age, use #expired?

New features:

* Uses connection_pool to manage all connections for a Net::HTTP::Persistent
  instance.

Bug fixes:

* Add missing SSL options ca_path, ciphers, ssl_timeout, verify_depth.
  Issue #63 by Johnneylee Jack Rollins.

=== 2.9.4 / 2014-02-10

* Bug fixes
  * Improve proxy escaping from 2.9.2.  Pull request #59 by Mislav Marohnić.

=== 2.9.3 / 2014-02-06

* Bug fixes
  * Fix breakage in 2.9.2 for users without proxies.  Pull request #56 by
    Yoshihiro TAKAHARA (merged), #57 by ChuckLin, #58 by Kenny Meyer.

=== 2.9.2 / 2014-02-05

* Bug fixes
  * Special characters in proxy passwords are now handled correctly.  Issue
    #48 by Mislav Marohnić.  Pull request #54 by Juha Kajava

=== 2.9.1 / 2014-01-22

* Bug fixes
  * Added license to gemspec.  Issue #47 by Benjamin Fleischer
  * Set Net::HTTP#keep_alive_timeout when supported by ruby.  Pull request #53
    by Dylan Thacker-Smith.
  * The backtrace is preserved for errors in #reset to help with debugging.
    Issue #41 by Andrew Cholakian.

=== 2.9 / 2013-07-24

* Minor enhancement
  * Added Net::HTTP::Persistent#max_requests to avoid ECONNRESET for a server
    that allows a limited number of requests on a connection.  Pull request
    #42 by James Tucker.
  * Request failures are now raised with the backtrace of the original
    exception.  This gives better insight into the reason for the failure.
    See #41 by Andrew Cholakian.
  * OpenSSL is no longer required.  If OpenSSL is not available an exception
    will be raised when attempting to access HTTPS resources.  Feature request
    by André Arko

* Bug fixes
  * Explain the proper way of sending parameters depending upon the request
    method.  Issue #35 by André Arko.
  * Handle Errno::ETIMEDOUT by retrying the request.  Issue #36 by André Arko.